tests/compile_fail/mpfr_header_must_not_expose_mpfc.cpp
#include <mpfrxx_mkII.h>

int main()
{
    gmpxx::mpfc_class value;
    (void)value;
    return 0;
}
